<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplicationml.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.myapplicationml.ui.gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_avis"
        android:name="com.example.myapplicationml.ui.avis.AvisFragment"
        android:label="@string/title_avis"
        tools:layout="@layout/fragment_avis" />
    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.example.myapplicationml.ui.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>