<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_home_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmi_1"
        app:tint="@color/bleu" />

    <ImageView
        android:id="@+id/icon_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_square_foot_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/bleu" />

    <ImageView
        android:id="@+id/icon_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_thermostat_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmi_2"
        app:tint="@color/bleu" />

    <TextView
        android:id="@+id/textmi1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="17dp"
        android:text="@string/title_presta1"
        android:textColor="@color/bleu"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/icon_3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textmi_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/presta1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmi1" />

    <TextView
        android:id="@+id/textmi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:text="@string/title_presta2"
        android:textColor="@color/bleu"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/icon_1"
        app:layout_constraintTop_toBottomOf="@+id/textmi_1" />

    <TextView
        android:id="@+id/textmi_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/presta2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmi2" />

    <TextView
        android:id="@+id/textmi3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:text="@string/title_presta3"
        android:textColor="@color/bleu"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/icon_5"
        app:layout_constraintTop_toBottomOf="@+id/textmi_2" />

    <TextView
        android:id="@+id/textmi_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/presta3"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmi3" />

</androidx.constraintlayout.widget.ConstraintLayout>