<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/atouts"
            android:layout_width="122dp"
            android:layout_height="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_atouts"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assurances"
            android:layout_width="128dp"
            android:layout_height="21dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/title_assurances"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assurance2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:text="@string/assurance2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon5"
            app:layout_constraintTop_toBottomOf="@+id/assurance1" />

        <TextView
            android:id="@+id/assurance1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/assurance1"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon4"
            app:layout_constraintTop_toBottomOf="@+id/assurances" />

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="140dp"
            android:src="@drawable/ic_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assurances"
            app:tint="@color/bleu" />

        <ImageView
            android:id="@+id/icon5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="140dp"
            android:src="@drawable/ic_flood"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon4"
            app:tint="@color/bleu" />

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_architecture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon1"
            app:tint="@color/bleu" />

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_designservice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atouts"
            app:tint="@color/bleu" />

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_handyman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon2"
            app:tint="@color/bleu" />

        <TextView
            android:id="@+id/atout1"
            android:layout_width="176dp"
            android:layout_height="17dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:text="@string/atout1"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/atout2"
            app:layout_constraintStart_toEndOf="@+id/icon1"
            app:layout_constraintTop_toBottomOf="@+id/atouts" />

        <TextView
            android:id="@+id/atout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/atout2"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/atout3"
            app:layout_constraintStart_toEndOf="@+id/icon2"
            app:layout_constraintTop_toBottomOf="@+id/atout1" />

        <TextView
            android:id="@+id/atout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="249dp"
            android:text="@string/atout3"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon3"
            app:layout_constraintTop_toBottomOf="@+id/atout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>